--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^14.2.29",
+    "next-intl": "^4.3.3",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "latest",
     "react": "^18",
