--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-top-loading-bar": "^3.0.2",
     "recharts": "2.15.0",
+    "sharp": "^0.34.4",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
